--- a/appuser-service/src/main/resources/application.yaml
+++ b/appuser-service/src/main/resources/application.yaml
@@ -33,3 +33,10 @@ application:
     jwt:
       secret-key: myjwtsecretkeyforbackendproject123456789
       expiration: 86400000
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
